--- a/_jobs/2.md
+++ b/_jobs/2.md
@@ -1,7 +1,7 @@
 ---
 title: another cg specialist
 date: 2021-01-31T13:26:37.000+03:00
-published: true
+published: false
 
 ---
 Описание другой вакансии
